crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__relationships__nested_object_relationships.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Album": {
          "rows": [
            {
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              },
              "album": "Meus Momentos"
            }
          ]
        },
        "track": "Grito De Alerta"
      },
      {
        "Album": {
          "rows": [
            {
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              },
              "album": "Meus Momentos"
            }
          ]
        },
        "track": "Não Dá Mais Pra Segurar (Explode Coração)"
      },
      {
        "Album": {
          "rows": [
            {
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              },
              "album": "Meus Momentos"
            }
          ]
        },
        "track": "Começaria Tudo Outra Vez"
      },
      {
        "Album": {
          "rows": [
            {
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              },
              "album": "Meus Momentos"
            }
          ]
        },
        "track": "O Que É O Que É ?"
      },
      {
        "Album": {
          "rows": [
            {
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              },
              "album": "Meus Momentos"
            }
          ]
        },
        "track": "Sangrando"
      }
    ]
  }
]
