crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__relationships__very_nested_recursive_relationship.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "0Name": "AC/DC",
        "Albums": {
          "rows": [
            {
              "0Title": "For Those About To Rock We Salute You",
              "public.Artist": {
                "rows": [
                  {
                    "0ArtistId": 1,
                    "Albums": {
                      "rows": [
                        {
                          "0Title": "For Those About To Rock We Salute You",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "AC/DC"
                              }
                            ]
                          }
                        },
                        {
                          "0Title": "Let There Be Rock",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "AC/DC"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              "0Title": "Let There Be Rock",
              "public.Artist": {
                "rows": [
                  {
                    "0ArtistId": 1,
                    "Albums": {
                      "rows": [
                        {
                          "0Title": "For Those About To Rock We Salute You",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "AC/DC"
                              }
                            ]
                          }
                        },
                        {
                          "0Title": "Let There Be Rock",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "AC/DC"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        "0Name": "Accept",
        "Albums": {
          "rows": [
            {
              "0Title": "Balls to the Wall",
              "public.Artist": {
                "rows": [
                  {
                    "0ArtistId": 2,
                    "Albums": {
                      "rows": [
                        {
                          "0Title": "Balls to the Wall",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "Accept"
                              }
                            ]
                          }
                        },
                        {
                          "0Title": "Restless and Wild",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "Accept"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              "0Title": "Restless and Wild",
              "public.Artist": {
                "rows": [
                  {
                    "0ArtistId": 2,
                    "Albums": {
                      "rows": [
                        {
                          "0Title": "Balls to the Wall",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "Accept"
                              }
                            ]
                          }
                        },
                        {
                          "0Title": "Restless and Wild",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "Accept"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        "0Name": "Aerosmith",
        "Albums": {
          "rows": [
            {
              "0Title": "Big Ones",
              "public.Artist": {
                "rows": [
                  {
                    "0ArtistId": 3,
                    "Albums": {
                      "rows": [
                        {
                          "0Title": "Big Ones",
                          "public.Artist": {
                            "rows": [
                              {
                                "0Name": "Aerosmith"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
]
